fix: add katex overflow rule

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,3 +5,7 @@
 :root {
     font-family: var(--font-fraunces);
 }
+
+.katex-display {
+    overflow-x: auto;
+}
